# quackin

./: .gitignore  Cargo.toml  LICENSE.md  README.md
benches/: oozie.rs
data/: .#mock.csv  mock.csv  mock_custom.csv  mock_headers.csv  mock_separator.csv  movielens.csv
data/mini_set/: items.csv  ratings.csv  users.csv
src/: data.rs  lib.rs  recommender.rs  similarity.rs  sparse.rs
src/data/: data_set.rs  mod.rs
src/measure/: mod.rs  similarity.rs
src/metrics/: mod.rs  similarity.rs
src/recommender/: mod.rs
src/recommender/collaborative/: knn_user.rs  mod.rs
tests/: data_set.rs  knn_user.rs  oozie.rs  quackin.rs  read.rs  similarity.rs
